--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,17 +1,17 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
+dvitanov:
+  name: Deyan Vitanov
+  title: Pipeable contributor
+  url: https://github.com/dvitanov
+  image_url: https://github.com/dvitanov.png
 
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
+pdobrev:
+  name: Petar Dobrev
+  title: Pipeable contributor
+  url: https://github.com/pdobrev
+  image_url: https://github.com/pdobrev.png
 
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+jlozano:
+  name: Juan Lozano
+  title: Pipeable contributor
+  url: https://github.com/jlozano
+  image_url: https://github.com/jlozano.png
